styles/Program/_program-tabs.scss
.program-tabs {
  padding-top: 3rem;
  padding-bottom: 3rem;
  @include mobile {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
  .react-tabs__tab-panel {
    background-color: rgba(255, 255, 255, 0.05);
    padding: 3rem 0;
  }
  .react-tabs__tab-list {
    border-bottom: none;
    margin-bottom: 0;
    font-size: crem(32px);
    line-height: crem(48px);
    .react-tabs__tab {
      color: rgba(255, 255, 255, 0.2);
      padding: 0.75rem 2rem;
      bottom: 0;
      background: rgba(255, 255, 255, 0.025);
      border-radius: 0;
      margin-right: 1rem;
      font-weight: 900;
    }
    .react-tabs__tab--selected {
      background-color: rgba(255, 255, 255, 0.05);
      border: none;
      color: $yellow;
    }
  }
  .head {
    padding: 0 2rem;
    img {
      margin-bottom: crem(90px);
    }
  }
  p.note-text {
    width: 80%;
    padding-top: 2rem;
    display: flex;
    font-size: crem(24px);
    line-height: crem(36px);
    color: $yellow;
    font-style: italic;
    margin-right: 15%;
    padding-bottom: 1.5rem;
    @include touch {
      margin-right: 7%;
    }
  }
  .program-item {
    display: flex;
    width: 100%;
    padding: 2rem;

    &.break {
      background-color: $yellow;
      p.time {
        color: black !important;
      }
      p.type {
        display: none;
      }
      p.title {
        color: black;
        font-weight: 900;
        text-transform: uppercase;
        margin-bottom: 0;
      }
      .item-event {
        padding: 0 !important;
      }
      .tags {
        margin-top: 0;
      }
    }
    .left {
      width: 30%;
      text-align: center;
      flex-shrink: 0;
      @include touch {
        margin-right: 1.5rem;
      }
    }
    .right {
      width: 100%;
    }
    .item-event {
      padding-bottom: 3rem;
      &:not(:last-of-type) {
        border-bottom: 1px solid $yellow;
      }
      &:first-of-type {
        border-bottom: 1px solid $yellow;
      }
      margin-right: 15%;
      @include touch {
        margin-right: 7%;
      }
    }
    &:last-of-type {
      .item-event {
        border-bottom: none;
      }
    }
    .item-event:not(:first-of-type) {
      padding-top: 3rem;
    }
    &:not(.break) {
      padding-bottom: 0;
      margin-bottom: -0.2rem;
    }
    p.time {
      color: $yellow;
      font-size: crem(32px);
      line-height: crem(48px);
    }
    p.type {
      color: gray;
      font-style: italic;
      font-size: crem(24px);
      line-height: crem(36px);
    }
    p.title {
      color: $yellow;
      margin-bottom: 0.5rem;
      font-size: crem(32px);
      line-height: crem(48px);
    }
    p.speaker {
      color: white;
      font-style: italic;
      font-size: crem(24px);
      line-height: crem(36px);
      font-weight: 800;
    }
    p.desc {
      font-size: crem(24px);
      line-height: crem(36px);
      color: white;
      margin-bottom: 2rem;
    }
    .tags {
      display: flex;
      align-items: center;
      justify-content: flex-start;
      gap: 1rem;
      margin-top: 1.5rem;
      .tag {
        background-color: rgba(196, 196, 196, 0.1);
        color: white;
        font-size: crem(18px);
        border-radius: 100px;
      }
    }
  }
}

